--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,37 @@
+# Dependencies
 node_modules/
+
+# Build outputs
+dist/
+release/
+out/
+
+# Local testing data
 Takeout/
 Final_Gallery/
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS Files
+.DS_Store
+Thumbs.db
+
+# IDEs
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# Environment
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Vite
+.vite/
